--- a/vTiger1/test-output/old/Default suite/classes.html
+++ b/vTiger1/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.vtiger.testdata.VendorsSettings1</td>
+<td>com.vtiger.testdata.EditVendor</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testVendorsSettings1</td>
+<td>testEditVendor</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
